grammar.js
    source_file: $ => seq(
      optional($.export_header),
      $.class_file,
    ),

    class_file: $ => repeat1(choice(
      $.forward_declaration_section,
      $.structure_definition,
      $.global_variables_section,
      $.shared_variables_section,
      $.instance_variables_section,
      $.class_type_definition,
      $.global_variable_declaration,
      $.external_function_prototypes,
      $.forward_function_prototypes,
      $.event_definition,
      $.function_definition,
      $.on_event_definition,
      // $.inner_class_type_definition,
    )),

    forward_declaration_section: $ => seq(
      alias($.forward_keyword, $.forward_declaration_statement),
      optional($.forward_declaration_statement_body),
      $.forward_declaration_statement_end,
    ),

    forward_declaration_statement_body: $ => repeat1(choice(
      $.class_type_definition,
      $.global_variable_declaration
    )),

    class_type_definition: $ => seq(
      $.class_type_definition_statement,
      optional($.class_type_definition_statement_body),
      $.end_type_declaration_statement,
    ),

    class_type_definition_statement: $ => seq(
      optional($.global_keyword),
      $.type_keyword,
      alias($.identifier, $.class_type_name),
      $.from_keyword,
      alias($.identifier, $.ancenstor_type_name),
      optional(seq($.native_keyword, alias($.string_literal, $.dll_path))),
      optional($.autoinstantiate_keyword),
      optional(seq(
        $.within_keyword,
        alias($.identifier, $.parent_class),
        optional(seq(
          $.descriptor_keyword,
          alias($.string_literal, $.descriptor_type),
          '=',
          alias($.string_literal, $.descriptor_value),
        )),
      )),
    ),

    class_type_definition_statement_body: $ => repeat1(choice(
      $.event_declaration,
      $.function_prototype,
      alias($.local_variable_declaration, $.inner_class_variable_declaration),
    )),

    global_variable_declaration: $ => seq(
      $.global_keyword,
      $.type,
      alias($.identifier, $.variable_name),
    ),

    forward_declaration_statement_end: $ => seq(
      $.end_keyword,
      $.forward_keyword,
    ),

    on_event_definition: $ => seq(
      $.on_event_definition_statement,
      optional(alias($.scriptable_block, $.on_event_definition_block)),
      $.on_event_definition_statement_end,
    ),

    on_event_definition_statement: $ => seq(
      $.on_keyword,
      alias($.identifier, $.class_name),
      '.',
      choice($.create_keyword, $.destroy_keyword),
    ),

    on_event_definition_statement_end: $ => seq($.end_keyword, $.on_keyword),

    // inner_class_type_definition: $ => seq(
    //   $.class_type_definition,
    //   repeat(choice(
    //     $.event_definition,
    //     $.on_event_definition,
    //   )),
    // ),

    end_type_declaration_statement: $ => seq($.end_keyword, $.type_keyword),

    function_prototype: $ => choice(
      $._function_prototype,
      $._subroutine_prototype,
    ),

    _function_prototype: $ => seq(
      optional($.global_keyword),
      optional($.access_modifier),
      $.function_keyword,
      alias($.type, $.return_type),
      alias($.identifier, $.function_name),
      $.parameter_list,
      optional($.throws_clause),
    ),

    _subroutine_prototype: $ => seq(
      optional($.global_keyword),
      optional($.access_modifier),
      $.subroutine_keyword,
      alias($.identifier, $.subroutine_name),
      $.parameter_list,
      optional($.throws_clause),
    ),

    function_definition: $ => choice(
      $._function_definition,
      $._subroutine_definition,
    ),

    _function_definition: $ => seq(
      $.function_definition_statement,
      optional(alias($.scriptable_block, $.function_definition_block)),
      $.function_definition_statement_end,
    ),

    function_definition_statement: $ => seq($._function_prototype, $.statement_separation),

    function_definition_statement_end: $ => seq($.end_keyword, $.function_keyword),

    _subroutine_definition: $ => seq(
      $.subroutine_definition_statement,
      optional(alias($.scriptable_block, $.subroutine_definition_block)),
      $.subroutine_definition_statement_end,
    ),

    subroutine_definition_statement: $ => seq($._subroutine_prototype, $.statement_separation),

    subroutine_definition_statement_end: $ => seq($.end_keyword, $.subroutine_keyword),

    parameter_list: $ => seq($.open_parenthesis, commaSep($.parameter), $.close_parenthesis),

    parameter: $ => seq(
      optional(alias(choice(
        $.ref_keyword,
        $.readonly_keyword,
      ), $.parameter_pass_by_type)),
      $.type,
      alias($.identifier, $.parameter_name),
      optional($.array_parameter_declaration_suffix),
    ),

    local_variable_declaration: $ => seq(
      optional($.constant_keyword),
      alias($.type, $.variable_type),
      optional($.variable_precision),
      $.variable_declaration_list,
    ),

    variable_declaration_list: $ => commaSep1($.variable_declaration),

    variable_declaration: $ => seq(
      alias($.identifier, $.variable_name),
      optional($.array_suffix),
      optional(seq('=', alias($.r_value_expression, $.initial_value))),
    ),

    array_parameter_declaration_suffix: $ => seq($.open_brackets, optional($.integer_literal), $.close_brackets),

    access_modifier: $ => choice(
      $.public_keyword,
      $.private_keyword,
      $.protected_keyword,
    ),

    statement: $ => choice(
      $.conditional_compilation_statement,
      $.choose_statement,
      $.do_loop,
      $.for_loop,
      $.goto_label,
      $.if_statement,
      $.inline_if_statement,
      $.local_variable_declaration_statement,
      $.try_catch_statement,
      $.while_loop,
      seq($.inline_statement, optional($.statement_separation)),
      $.sql_statement,
    ),

    if_statement: $ => seq(
      $.if_then_statement,
      optional(alias($.scriptable_block, $.if_block)),
      repeat($.elseif_clause),
      optional($.else_clause),
      $.if_then_statement_end,
    ),

    if_then_statement: $ => seq(
      $.if_keyword,
      alias($.r_value_expression, $.condition),
      $.then_keyword,
      optional($.statement_separation),
    ),

    if_then_statement_end: $ => seq(
      $.end_keyword,
      $.if_keyword,
      optional($.statement_separation),
    ),

    inline_if_statement: $ => prec.left(seq(
      $.if_keyword,
      alias($.r_value_expression, $.condition),
      $.then_keyword,
      alias($.inline_statement, $.if_case_statement),
      optional(seq($.else_keyword, alias($.inline_statement, $.else_case_statement))),
      optional($.statement_separation),
    )),

    local_variable_declaration_statement: $ => seq(
      $.local_variable_declaration,
      optional($.statement_separation),
    ),

    inline_statement: $ => choice(
      $.assignment_statement,
      $.call_statement,
      $.continue_statement,
      $.create_statement,
      $.destroy_statement,
      $.exit_statement,
      $.goto_statement,
      $.halt_statement,
      $.return_statement,
      $.throw_statement,
      $.expression_statement,
    ),

    assignment_statement: $ => seq(
      alias($.l_value_expression, $.l_value),
      alias(choice('=', '+=', '-=', '*=', '/=', '^='), $.operator),
      alias($.r_value_expression, $.r_value),
    ),

    call_statement: $ => seq(
      $.call_keyword,
      alias(choice($.super_keyword, $.r_value_expression), $.ancestor_name),
      optional(seq('`', alias($.identifier, $.control_name))),
      '::',
      alias($.identifier, $.event_name),
    ),

    create_statement: $ => choice(
      seq(
        alias($.l_value_expression, $.l_value),
        '=',
        $.create_keyword,
        $.type,
      ),
      seq(
        alias($.l_value_expression, $.l_value),
        '=',
        $.create_keyword,
        $.using_keyword,
        alias($.r_value_expression, $.dynamic_type),
      ),
    ),

    return_statement: $ => seq(
      $.return_keyword,
      optional(alias($.r_value_expression, $.return_value)),
    ),

    expression_statement: $ => seq(
      choice(
        $.method_invocation,
        $.update_expression,
      ),
    ),

    method_invocation: $ => prec(PREC.METHOD_INVOCATION, seq(
      optional(choice(
        seq(
          alias(choice($.r_value_expression), $.method_object),
          alias('.', $.operator)
        ),
        seq(
          optional($.super_keyword),
          alias('::', $.operator),
        )
      )),
      repeat(
        choice(
          alias(choice($.function_keyword, $.event_keyword), $.method_type),
          alias(choice($.static_keyword, $.dynamic_keyword), $.call_type),
          alias(choice($.trigger_keyword, $.post_keyword), $.when_type),
        ),
      ),
      alias(choice($.identifier, $.primitive_type, $.close_keyword), $.method_name),
      $.argument_list,
    )),

    argument_list: $ => seq(
      $.open_parenthesis,
      commaSep(seq(optional($.ref_keyword), $.r_value_expression)),
      $.close_parenthesis,
    ),

    l_value_expression: $ => choice(
      $.identifier_expression,
      $.field_access,
      $.array_access,
    ),

    r_value_expression: $ => choice(
      $.l_value_expression,

      $.binary_expression,
      $.unary_expression,

      $._literal,
      $.array_literal,
      $.this_keyword,
      $.parent_keyword,
      $.enumetation_datatype,
      $.method_invocation,
      $.parenthesized_expression,
    ),

    binary_expression: $ => {
      const table = [
        { operator: '+', precedence: PREC.ADDITIVE },
        { operator: '-', precedence: PREC.ADDITIVE },
        { operator: '*', precedence: PREC.MULTIPLICATIVE },
        { operator: '/', precedence: PREC.MULTIPLICATIVE },
        { operator: '^', precedence: PREC.EXPONENTIATION },
        { operator: $.or_keyword, precedence: PREC.OR },
        { operator: $.and_keyword, precedence: PREC.AND },
        { operator: '=', precedence: PREC.EQUALITY },
        { operator: '<>', precedence: PREC.EQUALITY },
        { operator: '>', precedence: PREC.RELATIONAL },
        { operator: '<', precedence: PREC.RELATIONAL },
        { operator: '>=', precedence: PREC.RELATIONAL },
        { operator: '<=', precedence: PREC.RELATIONAL },
      ];

      return choice(...table.map(({ operator, precedence }) => {
        return prec.left(precedence, seq(
          alias($.r_value_expression, $.left_expression),
          alias(operator, $.operator),
          alias($.r_value_expression, $.right_expression),
        ));
      }));
    },

    identifier_expression: $ => prec(PREC.IDENTIFIER_EXPRESSION, seq(optional('::'), $.identifier, optional($.array_suffix_ref))),

    type: $ => choice(
      $.primitive_type,
      alias($.identifier, $.custom_type),
    ),

    _literal: $ => choice(
      $.integer_literal,
      $.decimal_literal,
      $.real_literal,
      $.string_literal,
      $.date_literal,
      $.time_literal,
      $.boolean_literal,
    ),

    integer_literal: _ => /\d+/,
    string_literal: $ => choice(
      seq($.double_quote, alias(repeat(token.immediate(prec(1, choice(/[^"\\]/, /\\./, /~"/)))), $.string_content), $.double_quote),
      seq($.single_quote, alias(repeat(token.immediate(prec(1, choice(/[^'\\]/, /\\./, /~'/)))), $.string_content), $.single_quote),
    ),

    primitive_type: _ => choice(
      caseInsensitiveAlias('blob'),
      caseInsensitiveAlias('boolean'),
      caseInsensitiveAlias('byte'),
      caseInsensitiveAlias('char'),
      caseInsensitiveAlias('character'),
      caseInsensitiveAlias('date'),
      caseInsensitiveAlias('datetime'),
      caseInsensitiveAlias('decimal'),
      caseInsensitiveAlias('dec'),
      caseInsensitiveAlias('double'),
      caseInsensitiveAlias('integer'),
      caseInsensitiveAlias('int'),
      caseInsensitiveAlias('longlong'),
      caseInsensitiveAlias('longptr'),
      caseInsensitiveAlias('long'),
      caseInsensitiveAlias('real'),
      caseInsensitiveAlias('string'),
      caseInsensitiveAlias('time'),
      caseInsensitiveAlias('unsignedinteger'),
      caseInsensitiveAlias('unsignedint'),
      caseInsensitiveAlias('uint'),
      caseInsensitiveAlias('unsignedlong'),
      caseInsensitiveAlias('ulong'),
      caseInsensitiveAlias('any'),
    ),

    open_parenthesis: _ => '(',
    close_parenthesis: _ => ')',
    open_brackets: _ => '[',
    close_brackets: _ => ']',
    single_quote: _ => '\'',
    double_quote: _ => '"',
    statement_separation: _ => ';',

    public_keyword: _ => reservedWord('public'),
    call_keyword: _ => reservedWord('call'),
    create_keyword: _ => reservedWord('create'),
    destroy_keyword: _ => reservedWord('destroy'),
    end_keyword: _ => reservedWord('end'),
    forward_keyword: _ => reservedWord('forward'),
    from_keyword: _ => reservedWord('from'),
    function_keyword: _ => reservedWord('function'),
    global_keyword: _ => reservedWord('global'),
    if_keyword: _ => reservedWord('if'),
    native_keyword: _ => reservedWord('native'),
    on_keyword: _ => reservedWord('on'),
    return_keyword: _ => reservedWord('return'),
    subroutine_keyword: _ => reservedWord('subroutine'),
    then_keyword: _ => reservedWord('then'),
    this_keyword: _ => reservedWord('this'),
    type_keyword: _ => reservedWord('type'),
    identifier: _ => /[a-zA-Z_][a-zA-Z0-9\-_$#%]*/,
