test/corpus/regression_errors.txt
==================
Built-in function calls (string, integer, etc)
==================
global function integer test_fixes ();
    string ls_error
    ls_error = string(123, '')
    ls_error = integer(ls_error)
    return 1
end function

---

(source_file
  (class_file
    (function_definition
      (function_definition_statement
        (global_keyword)
        (function_keyword)
        (return_type
          (primitive_type))
        (function_name)
        (parameter_list
          (open_parenthesis)
          (close_parenthesis))
        (statement_separation))
      (function_definition_block
        (statement
          (local_variable_declaration_statement
            (local_variable_declaration
              (variable_type
                (primitive_type))
              (variable_declaration_list
                (variable_declaration
                  (variable_name))))))
        (statement
          (inline_statement
            (assignment_statement
              (l_value
                (identifier_expression
                  (identifier)))
              (operator)
              (r_value
                (method_invocation
                  (method_name
                    (primitive_type))
                  (argument_list
                    (open_parenthesis)
                    (r_value_expression
                      (integer_literal))
                    (r_value_expression
                      (string_literal
                        (single_quote)
                        (single_quote)))
                    (close_parenthesis)))))))
        (statement
          (inline_statement
            (assignment_statement
              (l_value
                (identifier_expression
                  (identifier)))
              (operator)
              (r_value
                (method_invocation
                  (method_name
                    (primitive_type))
                  (argument_list
                    (open_parenthesis)
                    (r_value_expression
                      (l_value_expression
                        (identifier_expression
                          (identifier))))
                    (close_parenthesis)))))))
        (statement
          (inline_statement
            (return_statement
              (return_keyword)
              (return_value
                (integer_literal))))))
      (function_definition_statement_end
        (end_keyword)
        (function_keyword)))))

==================
Create statement precedence
==================
public function long of_test_create ();

lo_obj = create n_cst_test

end function

---

(source_file
  (class_file
    (function_definition
      (function_definition_statement
        (access_modifier
          (public_keyword))
        (function_keyword)
        (return_type
          (primitive_type))
        (function_name)
        (parameter_list
          (open_parenthesis)
          (close_parenthesis))
        (statement_separation))
      (function_definition_block
        (statement
          (inline_statement
            (create_statement
              (l_value
                (identifier_expression
                  (identifier)))
              (create_keyword)
              (type
                (custom_type))))))
      (function_definition_statement_end
        (end_keyword)
        (function_keyword)))))

==================
Reserved words as custom types (function_object, structure)
==================
global function integer test_fixes ();
    function_object ln_object
    structure lst_struct
    return 1
end function

---

(source_file
  (class_file
    (function_definition
      (function_definition_statement
        (global_keyword)
        (function_keyword)
        (return_type
          (primitive_type))
        (function_name)
        (parameter_list
          (open_parenthesis)
          (close_parenthesis))
        (statement_separation))
      (function_definition_block
        (statement
          (local_variable_declaration_statement
            (local_variable_declaration
              (variable_type
                (custom_type))
              (variable_declaration_list
                (variable_declaration
                  (variable_name))))))
        (statement
          (local_variable_declaration_statement
            (local_variable_declaration
              (variable_type
                (custom_type))
              (variable_declaration_list
                (variable_declaration
                  (variable_name))))))
        (statement
          (inline_statement
            (return_statement
              (return_keyword)
              (return_value
                (integer_literal))))))
      (function_definition_statement_end
        (end_keyword)
        (function_keyword)))))

===
IF inline problem
===

global subroutine test ();

if li_test < 0 then li_test = 0

if li_test > 0 then
  if li_test = 1 then
    li_test = 0
  end if
end if

end subroutine

---

(source_file
  (class_file
    (function_definition
      (subroutine_definition_statement
        (global_keyword)
        (subroutine_keyword)
        (subroutine_name)
        (parameter_list
          (open_parenthesis)
          (close_parenthesis))
        (statement_separation))
      (subroutine_definition_block
        (statement
          (inline_if_statement
            (if_keyword)
            (condition
              (binary_expression
                (left_expression
                  (l_value_expression
                    (identifier_expression
                      (identifier))))
                (operator)
                (right_expression
                  (integer_literal))))
            (then_keyword)
            (if_case_statement
              (assignment_statement
                (l_value
                  (identifier_expression
                    (identifier)))
                (operator)
                (r_value
                  (integer_literal))))))
        (statement
          (if_statement
            (if_then_statement
              (if_keyword)
              (condition
                (binary_expression
                  (left_expression
                    (l_value_expression
                      (identifier_expression
                        (identifier))))
                  (operator)
                  (right_expression
                    (integer_literal))))
              (then_keyword))
            (if_block
              (statement
                (if_statement
                  (if_then_statement
                    (if_keyword)
                    (condition
                      (binary_expression
                        (left_expression
                          (l_value_expression
                            (identifier_expression
                              (identifier))))
                        (operator)
                        (right_expression
                          (integer_literal))))
                    (then_keyword))
                  (if_block
                    (statement
                      (inline_statement
                        (assignment_statement
                          (l_value
                            (identifier_expression
                              (identifier)))
                          (operator)
                          (r_value
                            (integer_literal))))))
                  (if_then_statement_end
                    (end_keyword)
                    (if_keyword)))))
            (if_then_statement_end
              (end_keyword)
              (if_keyword)))))
      (subroutine_definition_statement_end
        (end_keyword)
        (subroutine_keyword)))))

==================
Multiline string continuation
==================
public function integer of_wrong_string ();
ls_wrong = "astetae e tea
teste"
end function

public function integer of_correct_string ();
ls_correct = "astetae e tea &
teste"
end function

---

(source_file
  (class_file
    (function_definition
      (function_definition_statement
        (access_modifier
          (public_keyword))
        (function_keyword)
        (return_type
          (primitive_type))
        (function_name)
        (parameter_list
          (open_parenthesis)
          (close_parenthesis))
        (statement_separation))
      (function_definition_block
        (statement
          (inline_statement
            (assignment_statement
              (l_value
                (identifier_expression
                  (identifier)))
              (operator)
              (r_value
                (string_literal
                  (double_quote)
                  (string_content)
                  (ERROR
                    (identifier))
                  (double_quote)))))))
      (function_definition_statement_end
        (end_keyword)
        (function_keyword)))
    (function_definition
      (function_definition_statement
        (access_modifier
          (public_keyword))
        (function_keyword)
        (return_type
          (primitive_type))
        (function_name)
        (parameter_list
          (open_parenthesis)
          (close_parenthesis))
        (statement_separation))
      (function_definition_block
        (statement
          (inline_statement
            (assignment_statement
              (l_value
                (identifier_expression
                  (identifier)))
              (operator)
              (r_value
                (string_literal
                  (double_quote)
                  (string_content)
                  (double_quote)))))))
      (function_definition_statement_end
        (end_keyword)
        (function_keyword)))))

==================
Assignment with method invocation
==================
public function long of_test ();

ls_name = this.ClassName()

end function

---

(source_file
  (class_file
    (function_definition
      (function_definition_statement
        (access_modifier
          (public_keyword))
        (function_keyword)
        (return_type
          (primitive_type))
        (function_name)
        (parameter_list
          (open_parenthesis)
          (close_parenthesis))
        (statement_separation))
      (function_definition_block
        (statement
          (inline_statement
            (assignment_statement
              (l_value
                (identifier_expression
                  (identifier)))
              (operator)
              (r_value
                (method_invocation
                  (method_object
                    (this_keyword))
                  (operator)
                  (method_name
                    (identifier))
                  (argument_list
                    (open_parenthesis)
                    (close_parenthesis))))))))
      (function_definition_statement_end
        (end_keyword)
        (function_keyword)))))
